--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background: #1e1f24;
     color: blue;
     text-align: center;
     font-family: "Arial";
@@ -13,6 +14,11 @@ body {
     color: white;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline {
@@ -31,4 +37,9 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
